<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="already_installed_ca">SSL certificate already installed.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">NetLimiter - Data &amp; Speed Control</string>
    <string name="app_sub_title">Data &amp; Speed Controller</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_bar_menu_dns">DNS Records</string>
    <string name="bottom_bar_menu_install_ca">Install CA</string>
    <string name="bottom_bar_menu_settings">Settings</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="ca_warning_message">NetLimiter use a SSL man in the middle proxy to decrypt encrypted traffic on your device . The MITM proxy requires that you install and trust a CA certificate created by NetLimiter.&lt;p>Unfortunately Since Android 7.0,&lt;a href=https://android-developers.googleblog.com/2016/07/changes-to-trusted-certificate.html>User-added CAs were not trusted anymore&lt;/a> This means for most apps, MITM proxy won’t work. Please read this &lt;a href=https://alisakkaf.github.io/netlimiter/docs> documentation&lt;/a> before you get started.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_application_tips">Choose the app you want to inspect</string>
    <string name="choose_application_title">App Chooser</string>
    <string name="clean_session_message">Previous inspected data will be removed before starting new inspecting</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">bccb94ddfc734b888268dde3724ac3c3</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="copy_as_curl">Copy as cURL</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="dash_desc_analytics">Network traffic analytics</string>
    <string name="dash_desc_dns">Recent dns query records</string>
    <string name="dash_desc_mitm">Http requests and responses</string>
    <string name="dash_desc_throttle">Network Throttling</string>
    <string name="dash_dns_hint">DNS Records</string>
    <string name="dash_title_dns">DNS</string>
    <string name="dash_title_http">MITM</string>
    <string name="dash_title_summary">Analytics</string>
    <string name="dash_title_throttle">Network throttling</string>
    <string name="dash_title_throttling">Throttling</string>
    <string name="default_web_client_id">280035748865-83g5u7igc6q4e7eo4675go96jcaqbtpb.apps.googleusercontent.com</string>
    <string name="dns_list_name">DNS Records</string>
    <string name="empty_http_body">EMPTY BODY</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="firebase_database_url">https://fiber-79064.firebaseio.com</string>
    <string name="gcm_defaultSenderId">280035748865</string>
    <string name="git_sha">3488176</string>
    <string name="global_mode">Global mode</string>
    <string name="google_api_key">AIzaSyB4TRyZycaOGMF1Uz-lNr-Hft299mOnwuQ</string>
    <string name="google_app_id">1:280035748865:android:4aec5dc3092011a2196400</string>
    <string name="google_crash_reporting_api_key">AIzaSyB4TRyZycaOGMF1Uz-lNr-Hft299mOnwuQ</string>
    <string name="google_storage_bucket">fiber-79064.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="http_message_body_title">Http Message Body</string>
    <string name="http_transactions">Requests</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="install_ca_dialog_message">Fiber SSL certificate need to be installed.</string>
    <string name="install_ca_dialog_title">Install SSL certificate</string>
    <string name="ipa_not_supported">In app purchase not supported on your device</string>
    <string name="ipa_unknown_error">Purchase failed</string>
    <string name="ipa_user_canceled">Canceled</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="no_app_selected">No app was selected</string>
    <string name="not_set">Not set</string>
    <string name="notice">Notice</string>
    <string name="notification_channel_desc">Throttly vpn notification</string>
    <string name="notification_channel_name">Vpn Notification</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="title_http_cap">Http</string>
    <string name="desc_mitm_sniff">Use MITM proxy to sniff https calls</string>
    <string name="title_dns_cap">Dns</string>
    <string name="desc_dns_recent">Recent dns query records</string>
    <string name="title_throttling_cap">Throttling</string>
    <string name="desc_throttling_bad">Monitor bad network condition</string>
    <string name="profile_detail_name">Name</string>
    <string name="profile_detail_download_bandwidth">Download Bandwidth</string>
    <string name="profile_detail_upload_bandwidth">Upload Bandwidth</string>
    <string name="profile_detail_latency">Latency</string>
    <string name="profile_detail_dns_delay">DNS Delay</string>
    <string name="summary_http_request">http request</string>
    <string name="summary_dns_queries">dns queries</string>
    <string name="summary_data_sent">data sent</string>
    <string name="summary_data_received">data received</string>
    <string name="msg_body_view_text">text</string>
    <string name="msg_body_view_json">json</string>
    <string name="work_mode_global">Global Mode </string>
    <string name="pref_category_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_github_title">Developer\'s GitHub Page</string>
    <string name="pref_facebook_title">Developer\'s Facebook Page</string>
    <string name="pref_website_title">Our Official Website</string>
    <string name="pref_dev_info_title">Developed &amp; Modified By AliSakkaf</string>
    <string name="pref_thanks_title">Special Thanks</string>
    <string name="pref_thanks_summary">Special thanks to twocities for the original base app.</string>
</resources>