<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="?actionBarSize" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView android:id="@id/title_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="0.0dip" app:cardElevation="4.0dip">
        <com.alisakkaf.networklimiter.ui.chooser.WorkModeSelectLayout android:textAppearance="?textAppearanceSubtitle2" android:layout_gravity="start|center" android:id="@id/app_mode_memu_button" android:background="?selectableItemBackground" android:paddingTop="@dimen/base_keyline_4" android:paddingBottom="@dimen/base_keyline_4" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/work_mode_global" android:drawableRight="@drawable/outline_arrow_drop_down_24" android:drawablePadding="@dimen/base_keyline_1" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
        <TextView android:textAppearance="?textAppearanceHeadline6" android:gravity="center" android:layout_gravity="start|center" android:paddingTop="@dimen/base_keyline_4" android:paddingBottom="@dimen/base_keyline_4" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="64.0dip" android:text="@string/app_name" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
    </com.google.android.material.card.MaterialCardView>
    <androidx.core.widget.NestedScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="2.0dip" android:paddingBottom="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
            <com.google.android.material.circularreveal.cardview.CircularRevealCardView android:id="@id/throttle_dashboard" android:layout_margin="16.0dip" android:layout_weight="1.0" app:cardBackgroundColor="#fff9aa33" app:strokeWidth="0.0dip" style="@style/Widget.Fiber.DashItemCardView">
                <com.google.android.material.textview.MaterialTextView android:layout_gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dash_title_throttle" android:drawableLeft="@drawable/ic_network_throttle_24dp" style="@style/Widget.Fiber.DashItemText" />
                <com.google.android.material.textview.MaterialTextView android:layout_gravity="left|bottom" android:id="@id/throttle_profile_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dash_desc_throttle" style="@style/Widget.Fiber.DashItemDesc" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
            <com.google.android.material.circularreveal.cardview.CircularRevealCardView android:id="@id/analytics_dashboard" android:visibility="gone" android:layout_marginTop="4.0dip" android:layout_marginBottom="16.0dip" android:minHeight="160.0dip" android:layout_weight="1.0" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:cardBackgroundColor="#ffffffff" style="@style/Widget.Fiber.DashItemCardView">
                <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dash_title_summary" android:drawableLeft="@drawable/round_bar_chart_24" style="@style/Widget.Fiber.DashItemText" />
                <com.google.android.material.textview.MaterialTextView android:id="@id/bytesTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.Fiber.DashItemValue" />
                <include android:visibility="gone" layout="@layout/dashboard_traffic_stats" />
                <com.google.android.material.textview.MaterialTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dash_desc_analytics" style="@style/Widget.Fiber.DashItemDesc" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
            <com.google.android.material.circularreveal.cardview.CircularRevealCardView android:id="@id/dns_dashboard" android:layout_margin="16.0dip" android:layout_weight="1.0" app:cardBackgroundColor="#ff258ffb" style="@style/Widget.Fiber.DashItemCardView">
                <com.google.android.material.textview.MaterialTextView android:layout_gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dash_title_dns" android:drawableLeft="@drawable/round_dash_dns_24" style="@style/Widget.Fiber.DashItemText" />
                <com.google.android.material.textview.MaterialTextView android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dash_desc_dns" style="@style/Widget.Fiber.DashItemDesc" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
