<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.Fiber.AnalyticsCardView"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/keyline_4" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?textAppearanceHeadline6" android:id="@id/title_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" />
        <TextView android:textAppearance="?textAppearanceSubtitle1" android:id="@id/sub_title_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/http_value" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.Fiber.OverviewValue" />
            <TextView android:id="@id/http_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/summary_http_request" app:layout_constraintBaseline_toBaselineOf="@id/http_value" app:layout_constraintStart_toEndOf="@id/http_value" style="@style/Widget.Fiber.OverviewTitle" />
            <TextView android:id="@id/dns_value" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/http_value" style="@style/Widget.Fiber.OverviewValue" />
            <TextView android:id="@id/dns_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/summary_dns_queries" app:layout_constraintBaseline_toBaselineOf="@id/dns_value" app:layout_constraintStart_toEndOf="@id/dns_value" style="@style/Widget.Fiber.OverviewTitle" />
            <TextView android:id="@id/data_sent_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="4.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dns_value" style="@style/Widget.Fiber.OverviewValue" />
            <TextView android:textAppearance="?textAppearanceBody2" android:id="@id/data_sent_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@id/data_sent_value" app:layout_constraintStart_toEndOf="@id/data_sent_value" />
            <TextView android:id="@id/data_sent_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/summary_data_sent" android:layout_marginStart="@dimen/keyline_2" app:layout_constraintBaseline_toBaselineOf="@id/data_sent_value" app:layout_constraintStart_toEndOf="@id/data_sent_unit" style="@style/Widget.Fiber.OverviewTitle" />
            <TextView android:id="@id/data_received_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="4.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/data_sent_value" style="@style/Widget.Fiber.OverviewValue" />
            <TextView android:textAppearance="?textAppearanceBody2" android:id="@id/data_received_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@id/data_received_value" app:layout_constraintStart_toEndOf="@id/data_received_value" />
            <TextView android:id="@id/data_received_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/summary_data_received" android:layout_marginStart="@dimen/keyline_2" app:layout_constraintBaseline_toBaselineOf="@id/data_received_value" app:layout_constraintStart_toEndOf="@id/data_received_unit" style="@style/Widget.Fiber.OverviewTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
